--- a/.env.exampleII
+++ b/.env.exampleII
@@ -1,6 +1,6 @@
-APP_NAME=Recordia
+APP_NAME=Geopartners
 APP_ENV=local
-APP_KEY=base64:sbojn+MT8D4KJJzlKrTJ5cjucS1FJYlOHhHOKVDDBzs=
+APP_KEY=base64:/XlIvNqzo7fcbfDtKXDKhga3bx7sBxyQ1HmljQVU7DY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.56.56
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=recordia
+DB_DATABASE=geopartners
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -30,11 +30,11 @@ REDIS_PORT=6379
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_PORT=587
 MAIL_USERNAME=405b2284c96dfa
 MAIL_PASSWORD=a7d8ce9c9f67c9
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="support@recordia.com"
+MAIL_FROM_ADDRESS="web@geopartners.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
